+ Added an ability to move the chat pane around the screen
+ The edited messages are now correctly indicated as such
+ Enlarged the reaction selection menu

## Localisation Support
Spanish
French
German